--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -2,3 +2,4 @@ protected net.minecraft.client.gui.widget.TextFieldWidget *
 protected net.minecraft.client.gui.widget.TextFieldWidget *()
 public net.minecraft.world.World func_189508_F(Lnet/minecraft/util/math/BlockPos;)Lnet/minecraft/tileentity/TileEntity;
 public net.minecraft.world.World field_147481_N
+public net.minecraft.entity.item.FallingBlockEntity field_175132_d
