--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -5,3 +5,5 @@ public net.minecraft.world.World field_147481_N
 public net.minecraft.entity.item.FallingBlockEntity *
 public net.minecraft.entity.Entity *
 public net.minecraft.entity.projectile.FireworkRocketEntity *
+public net.minecraft.client.MainWindow *
+public net.minecraft.client.Minecraft *
