--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -7,3 +7,4 @@ public net.minecraft.entity.Entity *
 public net.minecraft.entity.projectile.FireworkRocketEntity *
 public net.minecraft.client.MainWindow *
 public net.minecraft.client.Minecraft *
+public net.minecraft.entity.item.ItemEntity *
